force-app/main/default/objects/EstructuraEnSItio__c/EstructuraEnSItio__c.object-meta.xml
<CustomObject>
    <label>Estructura en Sitio</label>
    <nameField>
        <label>Nombre de Estructura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estructuras en Sitios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>