force-app/main/default/objects/EstructuraEnSItio__c/fields/Estructura__c.field-meta.xml
<CustomField>
    <fullName>Estructura__c</fullName>
    <label>Estructura</label>
    <referenceTo>Estructura__c</referenceTo>
    <relationshipLabel>Estructuras en Sitios</relationshipLabel>
    <relationshipName>EstructurasEnSitios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>