force-app/main/default/objects/EstructuraEnSItio__c/fields/Medio__c.field-meta.xml
<CustomField>
    <fullName>Medio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medio</label>
    <referenceTo>Medio__c</referenceTo>
    <relationshipLabel>Estructuras en Sitios</relationshipLabel>
    <relationshipName>EstructurasEnSitios</relationshipName>
    <type>Lookup</type>
</CustomField>