force-app/main/default/objects/EstructuraEnSItio__c/fields/Sitio__c.field-meta.xml
<CustomField>
    <fullName>Sitio__c</fullName>
    <formula>Medio__r.Sitio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sitio</label>
    <type>Text</type>
</CustomField>